virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: home
spec:
  hosts:
  - "*"
  gateways:
  - mcroapp-gateway
  http:
  - match:
    - uri:
        exact: /
    - uri:
        prefix: /static
    route:
    - destination:
        host: home
        port:
          number: 8080
  - match:
    - uri:
        prefix: /product
    route:
    - destination:
        host: product
        port:
          number: 8080
